BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/HTTP_Response__c.object-meta.xml
<CustomObject>
    <description>Used to store the HTTP callout traffic that is initiated from Salesforce.  In normal operation this should just contain error reporting, though can be switched to log all traffic for debug purposes.
            Documentation on usage can be found here:
            https://makepositive.atlassian.net/wiki/spaces/DEV/pages/1236041904/HTTP+Logging
    </description>
    <label>HTTP Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Name__c</columns>
        <columns>Request_Endpoint__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Response_Status_Code__c</columns>
        <columns>Response_Status_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>HTTP Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HTTP Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>