BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Request_Body__c.field-meta.xml
<fields>
    <fullName>Request_Body__c</fullName>
    <description>The body of the request that was made (or the first 131,072 characters of it...)</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</fields>