BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Request_Endpoint__c.field-meta.xml
<fields>
    <fullName>Request_Endpoint__c</fullName>
    <description>The endpoint that was requested, causing the error</description>
    <label>Request Endpoint</label>
    <length>255</length>
    <type>Text</type>
</fields>