BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Request_Method__c.field-meta.xml
<fields>
    <fullName>Request_Method__c</fullName>
    <description>The HTTP method used when making the request</description>
    <label>Request Method</label>
    <length>20</length>
    <type>Text</type>
</fields>