BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Response_Body__c.field-meta.xml
<fields>
    <fullName>Response_Body__c</fullName>
    <description>The body of the HTTP response</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</fields>