BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Response_Headers__c.field-meta.xml
<fields>
    <fullName>Response_Headers__c</fullName>
    <description>The headers embodied in the response</description>
    <label>Response Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</fields>