BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Response_Status_Code__c.field-meta.xml
<fields>
    <fullName>Response_Status_Code__c</fullName>
    <description>The status code embodied in the response</description>
    <label>Response Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>