BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Response_Status_Message__c.field-meta.xml
<fields>
    <fullName>Response_Status_Message__c</fullName>
    <description>The status message of the response</description>
    <label>Response Status Message</label>
    <length>255</length>
    <type>Text</type>
</fields>