BoilerPlateOrg/force-app/http-logging/default/objects/HTTP_Response__c/fields/Service_Name__c.field-meta.xml
<fields>
    <fullName>Service_Name__c</fullName>
    <description>The name of the service that was requested (e.g. SendGrid Send Mail)</description>
    <label>Service_Name</label>
    <length>255</length>
    <type>Text</type>
</fields>